CanvasResourceDispatcher: correct viz::TextureDrawQuad size

This CL fixes the Size we SetAll() in the viz::TextureDrawQuad
from an empty one to the appropriate CanvasResource Size -- this
is needed to indicate to e.g. Ozone the |resource_size_in_pixels|
of the overlay candidate, but it's also more correct in general.

Also removes an unused variable and adds {} in a few needed places.

Bug: 869161
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ice28fb8c9d7f9a4eee29a22f8634b08c9dfb2e36
Reviewed-on: https://chromium-review.googlesource.com/1157232
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579864}
Former-commit-id: 86d4fd13113a1daf835d15bee3879486cdfc1185